--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -100,7 +100,7 @@
         width: 240px;
         z-index: 1000;
         box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
-        transition: transform 0.2s both;
+        transition: transform 0.4s cubic-bezier(.32,.98,.47,1);
         top: 4.2rem;
     }
 
